# rgblamp

./: Cargo.toml  LICENSE  README.md
rgblamp/: Cargo.toml  README.md
rgblamp/examples/: README.md  basic.rs  blue.rs  builder.rs  filter_devices.rs  parse_descriptor.rs  simple.rs
rgblamp/src/: builder.rs  color.rs  error.rs  lamp_array.rs  lib.rs  parser.rs  range.rs
rgblamp/src/lamp_array/: mod.rs
rgblamp/src/lamparray/: device_info.rs  lamparrays.rs  mod.rs
rgblamp/src/reports/: lamp_array_attrs.rs  lamp_array_control.rs  lamp_attrs_request.rs  lamp_attrs_response.rs  lamp_multi_update.rs  lamp_range_update.rs  mod.rs  parser.rs
rgblamp/src/reports/utils/: buffer.rs  field.rs  info.rs  io.rs  mod.rs
rgblamp/src/utils/: field.rs  info.rs  io.rs  usage.rs
rgblamp_cli/: Cargo.toml
rgblamp_cli/src/: lamp_id.rs  main.rs
rgblamp_cli/src/commands/: auto.rs  effect.rs  effects.rs  list.rs  mod.rs  set.rs
rgblamp_cli/src/device/: args.rs  mod.rs
rgblamp_cli/src/effects/: rainbow.rs
rgblampctl/: Cargo.toml
rgblampctl/src/commands/: auto.rs  list.rs  set.rs
rgblampctl/src/device/: hid_info.rs  iter.rs  mod.rs
src/: lib.rs  main.rs  parser.rs
src/lamp_array/: mod.rs
src/reports/: io.rs  lamp_array_attributes.rs  lamp_array_attrs.rs  lamp_array_control.rs  lamp_attributes_request.rs  lamp_attributes_response.rs  lamp_attrs_request.rs  lamp_attrs_response.rs  lamp_multi_update.rs  lamp_range_update.rs  mod.rs  parser.rs
