[package]
name = "rgblamp"
version = "0.1.1"
edition = "2024"
description = "A library to control HID LampArray devices on Linux"
homepage = "https://github.com/aryaveersr/rgblamp"
repository = "https://github.com/aryaveersr/rgblamp"
license = "MIT"
keywords = ["lamparray", "linux", "rgb"]
categories = ["hardware-support"]

[dependencies]
enum_dispatch = "0.3.13"
nix = { version = "0.31.3", features = ["ioctl"] }
thiserror = "2.0.18"

bilge.workspace = true
color = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
color-impl = ["dep:color"]
serde = ["dep:serde"]
