[package]
name = "rgblamp_cli"
version = "0.1.1"
edition = "2024"
description = "A command-line application to control HID LampArray devices on Linux"
homepage = "https://github.com/aryaveersr/rgblamp"
repository = "https://github.com/aryaveersr/rgblamp"
license = "MIT"
keywords = ["cli", "lamparray", "linux", "rgb"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "rgblamp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
serde_json = "1.0.150"

bilge.workspace = true
color = { workspace = true, features = ["serde"] }
log.workspace = true
serde = { workspace = true, features = ["derive"] }

rgblamp = { path = "../rgblamp/", version = "0.1.1", features = ["serde"] }
