[package]
name = "rgblampctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
serde_json = "1.0.150"

color = { workspace = true, features = ["serde"] }
log.workspace = true

rgblamp = { path = "../rgblamp/", features = ["serde"] }
